Fixed issue with tab bar icons spacing

--- a/client/stylesheets/base.less
+++ b/client/stylesheets/base.less
@@ -899,9 +899,6 @@ label.required:after {
 		list-style-type: none;
 		float: left;
     margin-right: 40px;
-		&:last-child {
-			margin-right: 0;
-		}
 		i {
 	    font-size: 24px;
 	    color: @info-font-color;
@@ -4997,10 +4994,15 @@ a.github-fork {
 		width: 100%;
     border-bottom: 1px solid rgba(0, 0, 0, 0.15);
 		li {
-			margin-right: 60px;
+			margin-right: auto;
+			margin-left: auto;
 		}
 		.icon-container {
 			margin-top: -10px;
+			display: flex;
+			margin-left: auto;
+			margin-right: auto;
+			width: 90%;
 		}
 		&.hidden {
 			display: none;
@@ -5178,9 +5180,6 @@ a.github-fork {
     width: 100%;
     border-bottom: 1px solid;
 		transition: display .4s ease;
-		i:last-child {
-			margin-right: 0;
-		}
 	}
 
 	#login-card {
